# Modern-cpp-2018

./: .gitignore
hw1/: Ex1.sh  guessing_game.cpp
hw2/data_viz/: auto_plotting.py  images.py  plotting.py
hw2/generating_library/: .gitignore  CMakeLists.txt  io_tools.cpp
hw2/igg_image/: .gitignore  CMakeLists.txt
hw2/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h
hw2/igg_image/tests/: CMakeLists.txt  test_image.cpp
hw3/igg_image/: .gitignore  CMakeLists.txt
hw3/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h
hw3/igg_image/src/igg_image/io_strategies/: CMakeLists.txt  ppm_strategy.cpp  ppm_strategy.h  ppm_strategy_old.cpp
hw3/igg_image/tests/: CMakeLists.txt  test_init.cpp
hw4/homework_4/digit_counter/: CMakeLists.txt
hw4/homework_4/digit_counter/include/: digit_counting.h
hw4/homework_4/digit_counter/src/: CMakeLists.txt  digit_counting.cpp
hw4/homework_4/digit_counter/tests/: CMakeLists.txt  test_casting.cpp  test_modoperations.cpp
